<resources>
    <string name="app_name">Trivia</string>
    <string name="action_settings">Settings</string>

    <string name="quiz_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh nisl condimentum id venenatis a condimentum vitae. Dis parturient montes nascetur ridiculus mus mauris.</string>
    <string name="quiz_title">Example Quiz</string>
    <string name="quiz_start_button">TAKE QUIZ</string>

    <string name="next">Next</string>

    <string name="quiz_finished_message">You have completed the quiz!</string>
    <string name="quiz_finished_button">TAKE QUIZ AGAIN</string>

    <string name="tf_question">This is some placeholder text for a true-false question. This should automatically be changed to the text of your question.</string>
    <string name="t">True</string>
    <string name="f">False</string>

    <string name="mc_question">Placeholder text that should automatically be changed to the text of your question.</string>

</resources>
